# EroBot

./: Cargo.toml  README.md  db  main.db  package-lock.json
migrations/2023-10-29-103617_create_posts/: down.sql  up.sql
src/: .gitignore  bot.rs  db.rs  main.rs
src/bot/: .env  Cargo.toml  models.json  user.json
src/bot/src/: admin.rs  controller.rs  db.rs  main.rs  user.rs
src/bot/src/admin/: media_handler.rs  models.rs  posts.rs  types.rs  vip.rs
src/bot/src/db/: models.rs
src/db/: models.rs  schema.rs
src/gateway/: .gitignore
src/gateway/configs/: nginx.conf  nginx.release.conf
src/webapp/: package-lock.json  package.json
src/webapp/src/: index.css  index.js
src/webapp/src/components/: Router.js
