[package]
name = "userbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.5.0"
serde = "1.0.178"
serde_json = "1.0.104"
uuid = {version = "1.4.1", features = ["serde"]}
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.26"
actix-web = "4.3.1"